Redirect to new URL in index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aruv Dand</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="refresh" content="0; url=https://ruv-and.github.io/" />
+  <script>location.href = "https://ruv-and.github.io/"</script>
+  <title>Redirecting…</title>
+</head>
+<body>Redirecting…</body>
 </html>
